[package]
name = "leptos-store"
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
description = "Enterprise-grade, type-enforced state management for Leptos"
repository = "https://github.com/web-mech/leptos-store"
documentation = "https://docs.rs/leptos-store"
homepage = "https://github.com/web-mech/leptos-store"
keywords = ["leptos", "state-management", "reactive", "wasm", "ssr"]
categories = ["web-programming", "wasm"]
readme = "README.md"
license = "Apache-2.0"
authors = ["web-mech"]

# Only include what's needed for the library
# Note: Cargo.lock and .cargo_vcs_info.json are auto-added during packaging
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[features]
default = ["ssr"]
ssr = []
hydrate = ["dep:serde", "dep:serde_json", "dep:web-sys", "dep:wasm-bindgen"]
csr = []

[dependencies]
leptos = { version = "0.8", default-features = false }
thiserror = "2.0"
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlScriptElement"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3"

# docs.rs configuration - build with all features to show complete API
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[workspace]
members = [".", "examples/auth-store-example", "examples/token-explorer-example"]