[package]
name = "auth-store-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-store = { path = "../.." }
thiserror = "2.0"
web-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
