[package]
name = "counter-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "counter-example"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_actix = { version = "0.8", optional = true }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos-store = { path = "../..", default-features = false }

# Server dependencies
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

# Client dependencies
wasm-bindgen = { version = "=0.2.108", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:tokio",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-store/ssr",
]
hydrate = [
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "leptos/hydrate",
    "leptos-store/hydrate",
]
csr = [
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "leptos/csr",
    "leptos-store/csr",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.leptos]
# The name of the output js/wasm files
output-name = "counter-example"

# The site root folder (for serving static files)
site-root = "target/site"

# The site-pkg folder (for the WASM/JS generated by cargo-leptos)
site-pkg-dir = "pkg"

# The port to run the server on
site-addr = "127.0.0.1:3001"

# CSS file to include
style-file = "style/main.css"

# Features to use when compiling the bin target (SSR)
bin-features = ["ssr"]

# Features to use when compiling the lib target (hydration)
lib-features = ["hydrate"]

# Disable file hashing since we manually reference CSS paths
hash-files = false

# Library profile for WASM builds
lib-profile-release = "release"

# Binary profile for server builds
bin-profile-release = "release"
